
    API / Behaviour Changes:
        - None.

    Bug Fixes:
        - None.

    New Features:
        - New --overwrite option for use as a Git filter.

    Improvements:
        - Put the options in the right order.
        - Update tidy/no-tidy decision logic and description.

    Packaging/Dependencies:
        - Update copyright email and year.
        - Add missing MANIFEST.SKIP

v1.1.0 (2026-01-20) TRIAL RELEASE

    API / Behaviour Changes:
        - Rename --filter option to --regex.

    Bug Fixes:
        - Ensure write/no-write decision is against *original* format,
          not the filtered format.

    New Features:
        - Can now use a --debug flag to output unified diff statements
          to STDERR during processing.

    Improvements:
        - Try to call test script (t/vcardtidy) correctly on Windows.
        - Documentation.
        - Try to call test script (t/vcardtidy) correctly on Windows.

    Packaging/Dependencies:
        - Minimum Perl version of v5.28 required for state variables in
          list context.
        - New dependency on Text::Diff.

v1.0.5 (2026-01-15) TRIAL RELEASE

    Bug Fixes:
        - Only overwrite VERSION when --force is used.

    Packaging/Dependencies:
        - Releasing today mostly because PAUSE seems to have hicupped
          yesterday and not indexed v1.0.4.

v1.0.4 (2026-01-14) TRIAL RELEASE

    API / Behaviour Changes:
        - Non-zero exit value if any file fails to tidy
        - Alias for --filter changed from '-f' to '-F'
        - Rename --do-nothing to just --nothing

    Enhancements:
        - Add missing VERSION field
        - Check for missing FN and N types and optionally auto-generate
          placedholders
        - Remove duplicate lines

    Bug Fixes:
        - UTF-8 Decode/Encode the STDIN/STDOUT streams

    Packaging:
        - Migration to full vX.Y.Z versioning.

1.0.2 (2022-10-10)

    Enhancements:
        - Documentation improvements.