@@ -1,0 +1,3 @@
+[DEFAULT]
+debian-branch = debian/latest
+upstream-branch = main
