@@ -1,0 +1,4 @@
+---
+Archive: CPAN
+Repository: https://github.com/mlawren/vcardtidy.git
+Repository-Browse: https://github.com/mlawren/vcardtidy
