@@ -1,0 +1,2 @@
+version=4
+https://metacpan.org/release/App-vcardtidy   .*/App-vcardtidy-v?@ANY_VERSION@@ARCHIVE_EXT@$
